syntax = "proto3";

package product;

message ProductSnRequest {
    int32 sn = 1;
}
message ProductPriceResponse {
    int32 price = 1;
}

message Empty {
}
message ProductsSnResponse {
    repeated int32 sn_list = 1;
}

service Product {
    rpc GetPrice (ProductSnRequest) returns (ProductPriceResponse);
    rpc GetProductsSn (Empty) returns (ProductsSnResponse);
}